# gst-zeromq

./: .gitignore  CMakeLists.txt
src/zeromq/: CMakeLists.txt  gstzmqsink.c  gstzmqsrc.c
